# Spartan_Hero_Game

./: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
GameLib/: CMakeLists.txt  Declaration.cpp  Declaration.h  DeclarationImage.cpp  DeclarationImage.h  DeclarationItem.cpp  DeclarationItem.h  DeclarationMeter.cpp  DeclarationMeter.h  DeclarationNote.cpp  DeclarationNote.h  DeclarationNoteVisitor.cpp  DeclarationNoteVisitor.h  DeclarationScoreBoard.cpp  DeclarationScoreBoard.h  DeclarationSoundBoard.cpp  DeclarationSoundBoard.h  DeclarationVisitor.cpp  DeclarationVisitor.h  Game.cpp  Game.h  GameStateManager.cpp  GameStateManager.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemImage.cpp  ItemImage.h  ItemKey.cpp  ItemKey.h  ItemMeter.cpp  ItemMeter.h  ItemScoreboard.cpp  ItemScoreboard.h  ItemSoundBoardVisitor.cpp  ItemSoundBoardVisitor.h  ItemSoundboard.cpp  ItemSoundboard.h  ItemTrackLine.cpp  (+37 more)
Tests/: CMakeLists.txt  DeclarationTest.cpp  GameManageTest.cpp  GameTest.cpp  ItemTest.cpp  MusicTest.cpp
audio/entertainer/: CONTENTS.txt  LICENSE.txt  LoopLoftTerms.txt
audio/fight-song/: CONTENTS.txt  LICENSE.txt
audio/piano/: LICENSE.txt
audio/trumpet/: LICENSE.txt
levels/: level0.xml  level1.xml  level2.xml  level3.xml
